syntax = "proto3";

package com.sciatta.xdfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.sciatta.xdfs.namenode.rpc.service";
option java_outer_classname = "NameNodeRpcServiceProto";

import "NameNodeRpcModel.proto";

service NameNodeRpcService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc mkdir(MkdirRequest) returns (MkdirResponse);
  rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
  rpc fetchEditLog(FetchEditLogRequest) returns (FetchEditLogResponse);
  rpc updateCheckpointTxid(UpdateCheckpointTxidRequest) returns (UpdateCheckpointTxidResponse);
}